--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "lucide-react": "^0.350.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
