--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
+    "react-select-country-list": "^2.2.3",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
