--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.2",
+    "antd": "^5.15.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "lucide-react": "^0.350.0",
