--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.350.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
